Consider empty url case when loading image

If using loadData() in Android WebView or inspector manually,
request url for image whose url is specified in relative url becomes empty.
Currently, it checks only that requested url is null.
Additionally, It should check it is empty.
Also in empty case, it should show broken image and alt text.

BUG=714818

Review-Url: https://codereview.chromium.org/2839633003
Cr-Commit-Position: refs/heads/master@{#474167}

Former-commit-id: 691a0f3c2d30008438fc155c91d99fde3f57d10a